# coal-train-cup

./: .env.local.example  .gitignore  Makefile  README.md  app.py  games_2025.json  jest.config.js  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test_nrl_api.py  tsconfig.tsbuildinfo  vercel.json
.streamlit/: config.toml
__tests__/: leaderboard-parity.test.ts  round-tips-route.test.ts
app/: HomeStats.tsx  globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/api/leaderboard/: route.ts
app/api/make-tip/: route.ts
app/api/round-tips/: route.ts
app/api/stats/: route.ts
app/api/submit-tip/: route.ts
app/api/tips/: route.ts
app/api/user-tips/: route.ts
app/egg/: page.tsx
app/leaderboard/: page.tsx
app/leaderboard-2025/: page.tsx
app/make-tip/: page.tsx
app/siliva-shield/: page.tsx
app/tips-by-round/: page.tsx
app/tips-by-user/: page.tsx
archive/Coal Train Cup App 2025/: Round 1.json  Round 10.json  Round 11.json  Round 12.json  Round 13.json  Round 14.json  Round 15.json  Round 16.json  Round 17.json  Round 18.json  Round 19.json  Round 2.json  Round 20.json  Round 21.json  Round 22.json  Round 23.json  Round 24.json  Round 25.json  Round 26.json  Round 27.json  Round 3.json  Round 4.json  Round 5.json  Round 6.json  Round 7.json  Round 8.json  Round 9.json
components/: easter-egg-version.tsx
components/icons/: nav-icons.tsx
components/layout/: page-container.tsx  section-header.tsx
components/ui/: alert.tsx  button.tsx  card.tsx  chart-container.tsx  empty-state.tsx  input.tsx  label.tsx  round-switcher.tsx  select.tsx  skeleton.tsx  stat-card.tsx  table-skeleton.tsx  table.tsx  winner-badge.tsx
data/: games_2025.csv  games_2025.json  user_tips_2025.json  users_2025.json
docs/: CACHE_STRATEGY.md  DEPLOYMENT.md  PARITY_CONTRACT.md  SILIVA_SHIELD_REFERENCE.md
lib/: admin.ts  cache.ts  constants.ts  data.ts  env.ts  leaderboard.ts  nrl.ts  sheets.ts  team-name.ts  tipping.ts  types.ts  username-mask.ts
scripts/: build_env_local.py  update-disk-cache.ts
src/coal_train_cup/: __init__.py  app.py  constants.py
src/utils/: append_round.py  download_draw.py  download_users_and_tips.py  map_team_names_in_migrate_sheet.py  scratch.py  siliva_sield_scoring.py  use_sheets.py
(+53 files in other folders)
