[project]
name = "coal-train-cup"
version = "0.1.0"
description = ""
authors = [
    {name = "Steven Burman",email = "steven.burman@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
packages = [{include = "coal_train_cup", from = "src"}]
dependencies = [
    "pydantic[email] (>=2.11.0,<3.0.0)",
    "tornado (>=6.5.1,<7.0.0)",
    "urllib3 (>=2.6.3,<3.0.0)",
    "streamlit (>=1.54.0,<2.0.0)",
    "pyasn1 (>=0.6.2,<0.7.0)",
    "plotly[express] (>=6.5.2,<7.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "altair (>=6.0.0,<7.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
mypy = "^1.15.0"
types-requests = "^2.32.0.20250328"
pandas-stubs = "^2.2.3.250308"
types-toml = "^0.10.8.20240310"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
